--- a/boards/s32k144_evb/Makefile
+++ b/boards/s32k144_evb/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building the tock kernel for the WeAct STM32F401CCU6 Core Board
 TARGET=thumbv7em-none-eabihf
-PLATFORM=weact-f401ccu6
+PLATFORM=s32k144_evb
 KERNEL=$(TOCK_ROOT_DIRECTORY)target/$(TARGET)/release/$(PLATFORM).elf
 KERNEL_WITH_APP=$(TOCK_ROOT_DIRECTORY)target/$(TARGET)/release/$(PLATFORM)-app.elf
 
