--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ members = [
     "boards/qemu_rv32_virt",
     "boards/swervolf",
     "boards/weact_f401ccu6/",
+    "boards/s32k144evb/",
     "capsules",
     "chips/apollo3",
     "chips/arty_e21_chip",
@@ -74,6 +75,7 @@ members = [
     "chips/stm32f4xx",
     "chips/swerv",
     "chips/swervolf-eh1",
+    "chips/s32k14x",
     "kernel",
     "libraries/enum_primitive",
     "libraries/riscv-csr",
