add gridania debug interface

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,6 +42,20 @@
             // "jlinkscript": "${workspaceRoot}/BSP/SEGGER/K66FN2M0_emPower/Setup/Kinetis_K66_Target.js",
             "runToMain": false,
             "svdFile": "${workspaceRoot}/boards/s32k144evb/S32K144.svd",
+        },
+        {
+            "type": "cortex-debug",
+            "request": "launch",
+            "name": "Gridania-Tel",
+            "cwd": "${workspaceRoot}",
+            "executable": "${workspaceRoot}/target/thumbv7em-none-eabi/debug/gridania-tel",
+            "servertype": "jlink",
+            "device": "S32K144",
+            "interface": "jtag",
+            "serialNumber": "", //If you have more than one J-Link probe, add the serial number here.
+            // "jlinkscript": "${workspaceRoot}/BSP/SEGGER/K66FN2M0_emPower/Setup/Kinetis_K66_Target.js",
+            "runToMain": false,
+            "svdFile": "${workspaceRoot}/boards/s32k144evb/S32K144.svd",
         }
     ]
 }
