--- a/chips/s32k14x/Cargo.toml
+++ b/chips/s32k14x/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "s32k14x"
-version.workspace = true
 authors.workspace = true
 edition.workspace = true
+name = "s32k14x"
+version.workspace = true
 
 [dependencies]
-cortexm4 = { path = "../../arch/cortex-m4" }
-enum_primitive = { path = "../../libraries/enum_primitive" }
-kernel = { path = "../../kernel" }
+cortexm4 = {path = "../../arch/cortex-m4"}
+enum_primitive = {path = "../../libraries/enum_primitive"}
+kernel = {path = "../../kernel"}
 
 [features]
 default = ["std"]
 std = []
+
+[dependencies.nb]
+version = "1"
